align and fixed meta and footer

--- a/Css/style.css
+++ b/Css/style.css
@@ -83,7 +83,7 @@ header nav li {
   font-family: "Montserrat", sans-serif;
   text-decoration: black;
   font-size: x-large;
-  margin-left: 100px;
+  margin-left: 300px;
 }
 
 /* Top and bottom*/
@@ -180,7 +180,7 @@ form {
 }
 
 .Movies > * {
-  flex: 1;
+  flex: auto;
 }
 
 .movie-thumbnail {
